# ZomatoAI

./: .gitignore  ARCHITECTURE.md  PHASES.md  pyproject.toml  requirements.txt  streamlit_app.py
phase1/: README.md  __init__.py  run_ingestion.py
phase2/: README.md  __init__.py  run_demo.py
phase3/: README.md  __init__.py  run_demo.py  run_groq_demo.py
phase4/: README.md  __init__.py  run_demo_with_observability.py  run_health.py
phase5/: README.md  __init__.py  app.py  run_server.py  schemas.py
phase6/: README.md  __init__.py  run_rerank_demo.py
phase6/ui/: index.html  package.json  vite.config.js
phase6/ui/src/: App.jsx  index.css
phase7/: README.md  __init__.py  run_serve.py
phase7/ui/: package.json  vite.config.js
phase7/ui/src/: App.jsx  index.css
tests/: test_api.py  test_e2e_pipeline.py  test_feedback.py  test_ingestion.py  test_llm_orchestrator.py  test_observability.py  test_phase7.py  test_recommendation.py  test_semantic_rerank.py
zomato_ai/: __init__.py  config.py  db.py  feedback.py  groq_client.py  ingest.py  llm_orchestrator.py  models.py  observability.py  preferences.py  recommendation.py  semantic_rerank.py
